<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".DashboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/user_details"
                android:text="[Name]'s Dashboard"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_gravity="start"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/groupList"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <LinearLayout
                    android:id="@+id/ButtonLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <Button
                        android:id="@+id/createGroupButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/create_group">
                    </Button>
                    <Button
                        android:id="@+id/joinGroupButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/join_group">
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/dashboard_nav" />

</RelativeLayout>