<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        android:icon="@drawable/baseline_logout_24"/>

</menu>