...
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ListView
                android:id="@+id/courseList"
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
            <Button
                android:id="@+id/joinGroupButton"
                android:layout_width="wrap_content"
...
